--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "nodemon": "^3.0.1"
   }
 }
