--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/services": ["./src/services"]
+      "@/services": ["./src/services"],
+      "@/images": ["./src/images"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
