--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "build": "tsc -p ."
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
@@ -15,7 +16,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^7.5.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.3",
